# value-from-type-derive

./: README.md
value_from_type_macros/: Cargo.toml  README.md
value_from_type_macros/src/: args.rs  attr.rs  common.rs  lib.rs
value_from_type_tests/: Cargo.toml
value_from_type_tests/tests/: derive_test.rs
value_from_type_traits/: Cargo.toml
value_from_type_traits/src/: lib.rs
