[package]
name = "value_from_type_macros"
version = "1.0.6"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]
description = "Implement enum (and cast methods) for a set of struct types"
license = "MIT"
documentation = "https://docs.rs/value_from_type_macros"
repository = "https://github.com/Bert-Proesmans/value-from-type-derive"

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.13.0", features = ['full'] }
quote = "0.5.0"
proc-macro2 = { version = "0.3.0", features = ["nightly"] }
# Easy case conversion
heck = "0.3.0"

[dev-dependencies]
value_from_type_traits = "1.0.0"
